# LosController

./: .gitignore
.cache/clangd/index/: ConnectPage.cpp.E1C237F1187843D4.idx  InitPage.cpp.04F073B607095887.idx  InitPage.h.22EC1D4BE602EB7F.idx  MainWindow.cpp.48CC8A9478522D26.idx  MainWindow.h.192E1954B5DA3F41.idx  NetManage.cpp.CE7CA1868D2F6572.idx  NetManage.h.8A5E45FF44570DED.idx  SettingPage.cpp.A7075D40E9582CA4.idx  SettingPage.h.A7C701A5A19A30D5.idx  TopWidget.h.A07C37F782316CAA.idx  logger.cpp.E4E7C3461B963304.idx  logger.h.403D50243F27910C.idx  main.cpp.1F1AC69E1F8FF786.idx  protocal.pb.cc.EDAA1322432A4E61.idx  protocal.pb.h.302E4B7406433F6C.idx  ui_InitPage.h.CD646F32116342B9.idx  ui_MainWindow.h.3FD0B58FDB9785FF.idx  ui_SettingPage.h.4F769D3F4F84B401.idx
Client/: CMakeLists.txt
Client/.cache/clangd/index/: ConnectPage.cpp.E1C237F1187843D4.idx  ConnectPage.h.18D43B3D8229C57B.idx  ConnectPage_style.h.B7270CE03A91FB2D.idx  InitPage.h.22EC1D4BE602EB7F.idx  InitPage_style.h.57B798E656578D3A.idx  MainWindow.cpp.48CC8A9478522D26.idx  MainWindow.h.192E1954B5DA3F41.idx  MainWindow_style.h.1D8A6656BAA7788C.idx  NetManage.cpp.CE7CA1868D2F6572.idx  NetManage.h.8A5E45FF44570DED.idx  SettingPage.h.A7C701A5A19A30D5.idx  SettingPage_style.h.A4B81A3790B3753F.idx  TopWidget.cpp.00160C114C6A5A32.idx  ui_ConnectPage.h.4FAF2E56BA70AF59.idx
Client/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_style.h  main.cpp  ui_ConnectPage.h  ui_InitPage.h  ui_MainWindow.h  ui_SettingPage.h
Client/src/component/InitPage/: InitPage.cpp  InitPage.h  InitPage.ui  InitPage_style.h
Client/src/component/SettingPage/: SettingPage.cpp  SettingPage.h  SettingPage.ui  SettingPage_style.h
Client/src/component/TopWidget/: TopWidget.cpp  TopWidget.h
Client/src/component/connectPage/: ConnectPage.cpp  ConnectPage.h  ConnectPage.ui  ConnectPage_style.h
Client/src/net/: NetManage.cpp  NetManage.h
README/: install.md  qt_html.html
common/: logger.cpp  logger.h  protocal.pb.cc  protocal.pb.h  protocal.proto
server/: CMakeLists.txt  test.cpp
server/src/: main.cpp
server/src/LosBuf/: LosBuf.cpp  LosBuf.h
server/src/LosErrorSet/: LosErrorSet.cpp  LosErrorSet.h
server/src/LosImage/: LosImage.cpp  LosImage.h
server/src/LosJpeg/: LosJpeg.cpp  LosJpeg.h
server/src/LosTcpServer/: LosTcpServer.cpp  LosTcpServer.h
